# Essential-Communication-Web-Project

./: README.md
back/wannakms/: Cargo.toml
back/wannakms/src/: main.rs  sql tables and inserts.sql
back/wannakms/src/handlers/form_handlers/: form_handler_package.rs  mod.rs
back/wannakms/src/handlers/message_handlers/: message_auth_handlers.rs  message_contact_connection_handler.rs  message_contact_handlers.rs  message_get_set_handlers.rs  message_handler_package.rs  mod.rs
back/wannakms/src/handlers/wailing_wall_handlers/: mod.rs
back/wannakms/src/schemas/: mod.rs
back/wannakms/src/schemas/form_schemas/: form_get_set_schemas.rs  mod.rs
back/wannakms/src/schemas/message_schemas/: message_auth_schemas.rs  message_contact_connection_schemas.rs  message_contact_schemas.rs  message_get_set_schemas.rs  mod.rs
front/iwannakms/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  vue.config.js
front/iwannakms/src/: App.vue  main.js
front/iwannakms/src/assets/: main.css
front/iwannakms/src/assets/styles/: main.css
front/iwannakms/src/components/contact components/add contacts/: AddContact.vue
front/iwannakms/src/components/contact components/update contacts/: UpdateContact.vue
front/iwannakms/src/components/message_components/: AddContactMyClient.vue  AddContactOtherClient.vue  MyServerMessages.vue  OtherServerMessageServers.vue
front/iwannakms/src/router/: index.js
front/iwannakms/src/views/: ContactView.vue  FormView.vue  HomeView.vue  MessageView.vue  Wailing-wallView.vue
(+1 files in other folders)
