[package]
name = "wannakms"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
handlebars = "6.1.0"
actix-cors = "0.7.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
sqlx = { version = "0.8.2", features = [
    "runtime-async-std-native-tls",
    "mysql",
    "chrono",
    "uuid",
] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
reqwest = { version = "0.12.8", features = ["json"] }
